z-index fix

--- a/assets/scss/_address-bar.scss
+++ b/assets/scss/_address-bar.scss
@@ -92,7 +92,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      z-index: 300;
+      z-index: 1200;
       width: 100%;
     }
   }
